# pdflayoutai

./: LICENSE  main.py  processing_summary.md  pyproject.toml  readme.md  requirements.txt  setup.py
pdflayoutai/: UniModel.py  cli.py
pdflayoutai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pdflayoutai/models/: baseModel.py  yolov8.py
pdflayoutai/models/Paddle/: paddle_cdla.py
pdflayoutai/models/weights/: yolov8l_doc.onnx  yolov8m_cdla.pt
